Bug 218424 - commit 274333f8 breaks some laptop keyboard after resume from suspend
Summary: commit 274333f8 breaks some laptop keyboard after resume from suspend
Status: RESOLVED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Other (show other bugs)
Hardware: All Linux
: P3 normal
Assignee: drivers_other
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-01-25 14:50 UTC by Rocket Aaron
Modified: 2024-03-04 02:49 UTC (History)
5 users (show)

See Also:
Kernel Version: 6.6.13
Subsystem:
Regression: Yes
Bisected commit-id: 274333f82597a78e884fea359e87c08f8cfd5612


Attachments
dmesg on 6.6.12 (good) (75.99 KB, text/plain)
2024-01-25 14:51 UTC, Rocket Aaron
Details
dmesg on 6.6.13 (bad) (76.41 KB, text/plain)
2024-01-25 14:51 UTC, Rocket Aaron
Details
dmesg_6.6.13 (111.12 KB, text/plain)
2024-01-26 13:37 UTC, arthur
Details
dmesg_6.6.12 (100.95 KB, text/plain)
2024-01-26 13:38 UTC, arthur
Details

Description Rocket Aaron 2024-01-25 14:50:24 UTC
LTS Kernel version 6.6.13 and stable kernel version 6.7.0 would make some laptop keyboard stop working after resume from suspend, and evemu-describe shows that input device

/dev/input/event4:      AT Translated Set 2 keyboard

was missing after resume.

The exact laptop model is XPS 13 9350 
 https://wiki.archlinux.org/title/Dell_XPS_13_(9350)
I can confirm reverting commit 274333f82597a78e884fea359e87c08f8cfd5612 on lts 6.6.13 would make the keyboard work again after resume.

Keyboard info:
# EVEMU 1.3
# Kernel: 6.6.13-1-lts
# DMI: dmi:bvnDellInc.:bvr1.12.2:bd12/15/2019:br1.12:svnDellInc.:pnXPS139350:pvr:rvnDellInc.:rn09JHRY:rvrA00:cvnDellInc.:ct9:cvr:sku0704:
# Input device name: "AT Translated Set 2 keyboard"
# Input device ID: bus 0x11 vendor 0x01 product 0x01 version 0xabba

Downstream report:
https://bbs.archlinux.org/viewtopic.php?pid=2146300
Comment 1 Rocket Aaron 2024-01-25 14:51:08 UTC
Created attachment 305779 [details]
dmesg on 6.6.12 (good)
Comment 2 Rocket Aaron 2024-01-25 14:51:32 UTC
Created attachment 305780 [details]
dmesg on 6.6.13 (bad)
Comment 3 arthur 2024-01-26 13:36:31 UTC
I have the same issue, different laptop on Fedora 39.

Laptop: Dell XPS 13 9370
Kernel: 6.6.13-200.fc39.x86_64

I don't have an extra keyboard, so gathering logs from journalctl -k
Comment 4 arthur 2024-01-26 13:37:40 UTC
Created attachment 305781 [details]
dmesg_6.6.13
Comment 5 arthur 2024-01-26 13:38:07 UTC
Created attachment 305782 [details]
dmesg_6.6.12
Comment 6 Hans de Goede 2024-01-26 16:10:33 UTC
Thank you for reporting this and sorry about the trouble.

I have submitted a patch-series fixing this upstream:
https://lore.kernel.org/linux-input/20240126160724.13278-1-hdegoede@redhat.com/

For now as a workaround I suggest staying with 6.6.12. Hopefully the fixes will get accepted upstream soon and also added to the 6.6.y (and other stable) series.
Comment 7 Rocket Aaron 2024-03-04 02:49:22 UTC
fixed in 6.7.5 / lts 6.6.17

Note You need to log in before you can comment on or make changes to this bug.